welcome.lessons.welcome.variables.Variables.scala.error
Variables:14: error: value unary_! is not a member of Int
while (!nbPas=0)
       ^Variables:20: error: type mismatch;
 found   : Unit
 required: Boolean
if (nbPas=0)
         ^